# domain/courier/handler/http/courier_handler.go
@@ -1,0 +1,113 @@
+package http
+
+import (
+	"cutbray/first_api/domain/courier/handler/request"
+	"cutbray/first_api/domain/courier/usecase"
+	"net/http"
+
+	"cutbray/first_api/pkg/response"
+	"cutbray/first_api/pkg/utils"
+
+	"github.com/gin-gonic/gin"
+)
+
+type courierHandler struct {
+	router    *gin.RouterGroup
+	usecase   usecase.CourierUsecase
+	validator *utils.Validator
+}
+
+func NewCourierHandler(router *gin.RouterGroup, usecase usecase.CourierUsecase, validator *utils.Validator) *courierHandler {
+	return &courierHandler{
+		router:    router,
+		usecase:   usecase,
+		validator: validator,
+	}
+}
+
+func (h *courierHandler) RegisterRoute() {
+	h.router.POST("/courier/login", h.Login)
+	h.router.POST("/courier/register", h.Register)
+}
+
+// Login godoc
+//
+//	@Summary	Authenticate courier with email and password
+//	@Tags		Courier
+//	@Accept		json
+//	@Param		payload	body	request.LoginRequest	true	"json type"
+//	@Produce	json
+//	@Success	200	{object}	response.SuccessResponse{data=[]any}	"success response so the data field is array of any type"
+//	@Success	201
+//	@Failure	400
+//	@Failure	404
+//	@Failure	422
+//	@Failure	500
+//	@Router		/api/courier/login [post]
+func (h *courierHandler) Login(c *gin.Context) {
+	var json request.LoginRequest
+	if err := c.ShouldBindJSON(&json); err != nil {
+		c.JSON(http.StatusBadRequest, response.BindErrorResponse{
+			Status:  http.StatusBadRequest,
+			Message: "Bad Request",
+		})
+		return
+	}
+
+	if errorMessage, isValid := h.validator.ValidateStruct(json); isValid == false {
+		c.JSON(http.StatusUnprocessableEntity, response.BindErrorResponse{
+			Status:  http.StatusUnprocessableEntity,
+			Message: "Validation failed",
+			Errors:  errorMessage,
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, response.SuccessResponse{
+		Status:  http.StatusOK,
+		Message: "Login success",
+		Data:    []any{},
+	})
+}
+
+// Register godoc
+//
+//	@Summary	Register a new courier
+//	@Tags		Courier
+//	@Accept		json
+//	@Param		payload	body	request.RegisterRequest	true	"json type"
+//	@Produce	json
+//	@Success	200	{object}	response.SuccessResponse{data=[]any}	"success response so the data field is array of any type"
+//	@Success	201
+//	@Failure	400
+//	@Failure	404
+//	@Failure	422
+//	@Failure	500
+//	@Router		/api/courier/register [post]
+func (h *courierHandler) Register(c *gin.Context) {
+	// Validate input
+	var json request.RegisterRequest
+	if err := c.ShouldBindJSON(&json); err != nil {
+		c.JSON(http.StatusBadRequest, response.BindErrorResponse{
+			Status:  http.StatusBadRequest,
+			Message: "Bad Request",
+		})
+		return
+	}
+
+	// Validate struct using validator
+	if errorMessage, isValid := h.validator.ValidateStruct(json); isValid == false {
+		c.JSON(http.StatusUnprocessableEntity, response.BindErrorResponse{
+			Status:  http.StatusUnprocessableEntity,
+			Message: "Validation failed",
+			Errors:  errorMessage,
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, response.SuccessResponse{
+		Status:  http.StatusOK,
+		Message: "Register success",
+		Data:    []any{},
+	})
+}
